fix styling scrollbars

--- a/scrollbar.css
+++ b/scrollbar.css
@@ -22,7 +22,7 @@
   width: 8px; /* 1px wider than Lion. */
   /* This is more usable for users trying to click it. */
   background-color: rgba(0,0,0,0);
-  -webkit-border-radius: 100px;
+  border-radius: 100px;
 }
 /* hover effect for both scrollbar area, and scrollbar 'thumb' */
 ::-webkit-scrollbar:hover {
@@ -34,12 +34,9 @@
   /* This is the EXACT color of Mac OS scrollbars. 
      Yes, I pulled out digital color meter */
   background: rgba(0,0,0,0.5);
-  -webkit-border-radius: 100px;
+  border-radius: 100px;
 }
 ::-webkit-scrollbar-thumb:vertical:active {
   background: rgba(0,0,0,0.61); /* Some darker color when you click it */
-  -webkit-border-radius: 100px;
+  border-radius: 100px;
 }
-
-background: linear-gradient(45deg, white, silver);
-min-height: 100%;
